FIX: cameras Cumulative Layout Shift

--- a/src/containers/cameras/Top/index.module.scss
+++ b/src/containers/cameras/Top/index.module.scss
@@ -59,7 +59,7 @@
       }
 
       &.placeholder::before {
-        background-color: var(--color-gray-d);
+        display: none;
       }
 
       a {
